# claude-mon

./: .gitignore  README.md  eslint.config.js  index.html  package.json  panda.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.serena/: project.yml
eslint-rules/: no-constants-in-tsx.js  no-inline-style-in-tsx.js  no-types-in-tsx.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: claude-house-state.py  claude-mon-state.py  claude-mon-statusline.py
src-tauri/src/: chat.rs  commands.rs  constants.rs  errors.rs  hook_installer.rs  lib.rs  main.rs  session.rs  settings.rs  socket_server.rs  tmux.rs  usage.rs
src-tauri/src/chat/: format.rs  mod.rs  path.rs  path_tests.rs  stats.rs  stats_tests.rs  transcript.rs  types.rs
src-tauri/src/commands/: mod.rs  types.rs
src-tauri/src/hook_installer/: constants.rs  mod.rs
src-tauri/src/session/: constants.rs  mod.rs  scanner.rs  tests.rs  types.rs
src-tauri/src/socket_server/: constants.rs  handler.rs  mod.rs  types.rs
src-tauri/src/tmux/: constants.rs  mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/usage/: mod.rs  types.rs
src-tauri/src/window/: mod.rs
src/__mocks__/: setup.ts
src/components/: Bar.tsx  BarBubble.styles.ts  BarBubble.tsx  BarView.styles.ts  BarView.tsx  Bubble.styles.ts  Bubble.tsx  Button.styles.ts  Button.tsx  Chat.AssistantMessage.tsx  Chat.GitDiffBlock.tsx  Chat.MessageGroup.tsx  Chat.SubagentMessage.tsx  Chat.ThinkingIndicator.tsx  Chat.styles.ts  (+48 more)
(+97 files in other folders)
