[package]
name = "claude-house"
version = "0.1.0"
description = "Claude Session Manager - A house where Claude mascots live"
authors = []
edition = "2021"

[lib]
name = "claude_house_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
chrono = "0.4"
